[package]
name = "inference_graph"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["sync"] }
toml = "0.5"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }
